--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <a href="#">Home to Home adoptions</a>
       <a href="#">adoption Agreements</a>
       <a href="#">Adoption Fees</a>
+      <a href="#">Adoption Fees</a>
     </div>
   </div> 
 
