created login in for login button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-    <a href="#login">Login</a>
+    <a href="#loginform.html">Login</a>
   </div>
 
   <form class="search" action="/action_page.php">
