--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
      </div>
     </div>
      <div class="adopapplication">
-      <h2 style="text-align: center;"><a href="adoptapplication.html">Adoption Application</a></h2>
+      <h2 style="text-align: center;"><a href="foster_app.html">Adoption Application</a></h2>
      </div>
 </body>
 </html>
