--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         <h1 class="logo">Dog haven<span style="color:#359127;"> Web</span> site</h1>
         </div>
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <div class="subnav">
     <button class="subnavbtn">Our Services <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
