--- a/foster_app.html
+++ b/foster_app.html
@@ -12,7 +12,7 @@
     <div>
         <h1 class="logo">Dog haven<span style="color:#359127;"> Web</span> site</h1>
         </div>
-  <a href="#home">Home</a>
+  <a href="index.html">Home</a>
   <div class="subnav">
     <button class="subnavbtn">Our Services <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-    <a href="#login">Login</a>
+    <a href="loginform.html">Login</a>
   </div>
 
   <form class="search" action="/action_page.php">
