--- a/loginform.html
+++ b/loginform.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="menu.css">
+  <link rel="stylesheet" href="form.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Login Form</title>
 </head>
 <body>
   <form action="loginform.php" method="post">
@@ -28,25 +30,3 @@
 </body>
 </html>
         
-<!--         <body>
-           <form action="loginform.php" method="post">
-                <table style="border: 0px;">
-                  <tr>
-                    <td>User Name </td>
-                    <td><input type="text" name="userName" /></td>
-                  </tr><br>
-                  <tr>
-                    <td>Password </td>
-                    <td><input type="text" name="pasword"/></td>
-                  </tr><br>
-                   <tr>
-                  <td colspan="2" style="text-align: center;"><input type="submit" value="Submit" /></td>
-                   </tr>
-                   <tr><br></tr>
-                </table>
-                <h5>Don't have account with us:  <a href="registerform.html">Sign Up</a></h5> 
-                </form>
-
-           
-        </body>
-    </html> -->
