added new file and updated old ones

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="subnav">
     <button class="subnavbtn">Adopt <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#">adoptable dogs</a>
+      <a href="#">Adoptable dogs</a>
       <a href="#">Home to Home adoptions</a>
       <a href="#">adoption Agreements</a>
       <a href="#">Adoption Fees</a>
@@ -35,9 +35,9 @@
     <button class="subnavbtn">Foster <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
       <a href="foster_app.html">Dog Foster Application</a>
-      <a href="#link2">Link 2</a>
+<!--       <a href="#link2">Link 2</a>
       <a href="#link3">Link 3</a>
-      <a href="#link4">Link 4</a>
+      <a href="#link4">Link 4</a> -->
     </div>
   </div>
 
@@ -65,7 +65,7 @@
      </div>
     </div>
      <div class="adopapplication">
-      <h2 style="text-align: center;"><a href="foster_app.html">Adoption Application</a></h2>
+      <h2 style="text-align: center;"><a href="adopt_app.html">Adoption Application</a></h2>
      </div>
 </body>
 </html>
