--- a/loginform.html
+++ b/loginform.html
@@ -9,22 +9,51 @@
   <title>Login Form</title>
 </head>
 <body>
+  <div class="navbar">
+    <div>
+        <h1 class="logo">Dog haven<span style="color:#359127;"> Web</span> site</h1>
+        </div>
+  <a href="index.html">Home</a>
+  <div class="subnav">
+    <button class="subnavbtn">Our Services <i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <a href="#">Adopt a Dog</a>
+      <a href="#">Dog Breeds</a>
+      <a href="#">overview</a>
+    </div>
+  </div> 
+  <div class="subnav">
+    <button class="subnavbtn">Adopt <i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <a href="#">adoptable dogs</a>
+      <a href="#">Home to Home adoptions</a>
+      <a href="#">adoption Agreements</a>
+      <a href="#">Adoption Fees</a>
+    </div>
+  </div> 
+
+  <div class="subnav">
+    <button class="subnavbtn">Foster <i class="fa fa-caret-down"></i></button>
+    <div class="subnav-content">
+      <a href="foster_app.html">Dog Foster Application</a>
+    </div>
+  </div>
+  </div>
+  <br>
+  <br>
+  <br>
+
   <form action="loginform.php" method="post">
-    <table style="border: 0px;">
-      <tr>
-        <td>User Name </td>
-        <td><input type="text" name="userName" /></td>
-      </tr><br>
-      <tr>
-        <td>Password </td>
-        <td><input type="text" name="pasword"/></td>
-      </tr><br>
-       <tr>
-      <td colspan="2" style="text-align: center;"><input type="submit" value="Submit" /></td>
-       </tr>
-       <tr><br></tr>
-    </table>
-    <h5>Don't have account with us:  <a href="registerform.html">Sign Up</a></h5> 
+
+        <label> <strong> User Name </strong></label>
+        <input type="text" name="userName" />
+    
+        <label><strong>Password </strong></label>
+        <input type="text" name="pasword"/>
+  
+     <input type="submit" value="Submit" >
+ 
+    <h5>Don't have account with us: <a href="registerform.html">Sign Up</a></h5> 
     </form>
   
 </body>
