got rid of a sub navbar

--- a/loginform.html
+++ b/loginform.html
@@ -15,17 +15,10 @@
         </div>
   <a href="index.html">Home</a>
   <div class="subnav">
-    <button class="subnavbtn">Our Services <i class="fa fa-caret-down"></i></button>
-    <div class="subnav-content">
-      <a href="#">Adopt a Dog</a>
-      <a href="#">Dog Breeds</a>
-      <a href="#">overview</a>
-    </div>
-  </div> 
-  <div class="subnav">
     <button class="subnavbtn">Adopt <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#">adoptable dogs</a>
+      <a href="#">Adopt a Dog</a>
+      <a href="#">Adoptable Dogs</a>
       <a href="#">adoption Agreements</a>
       <a href="#">Adoption Fees</a>
     </div>
