--- a/registerform.html
+++ b/registerform.html
@@ -14,19 +14,13 @@
         <h1 class="logo">Dog haven<span style="color:#359127;"> Web</span> site</h1>
         </div>
   <a href="index.html">Home</a>
-  <div class="subnav">
-    <button class="subnavbtn">Our Services <i class="fa fa-caret-down"></i></button>
-    <div class="subnav-content">
-      <a href="#">Adopt a Dog</a>
-      <a href="#">Dog Breeds</a>
-      <a href="#">overview</a>
-    </div>
-  </div> 
+
   <div class="subnav">
     <button class="subnavbtn">Adopt <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#">Adoptable dogs</a>
-      <a href="#">adoption Agreements</a>
+      <a href="#">Adopt a Dog</a>
+      <a href="#">Adoptable Dogs</a>
+      <a href="#">Adoption Agreements</a>
       <a href="#">Adoption Fees</a>
     </div>
   </div> 
