made new files and linked to navbar

--- a/adopt_app.html
+++ b/adopt_app.html
@@ -17,10 +17,10 @@
   <div class="subnav">
     <button class="subnavbtn">Adopt <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#">Adopt a Dog</a>
-      <a href="#">Adoptable Dogs</a>
-      <a href="#">Adoption Agreements</a>
-      <a href="#">Adoption Fees</a>
+      <a href="adopt_app.html">Adopt a Dog</a>
+      <a href="adoptable_dogs.html">Adoptable Dogs</a>
+      <a href="adoption_agreements.html">Adoption Agreements</a>
+      <a href="adoption_fees.html">Adoption Fees</a>
     </div>
   </div> 
 
@@ -47,7 +47,7 @@
         <div class="container">
           <header class="header">
             <h1 id="title">
-              Dog Foster form
+              Dog Adoption form
             </h1>
             <p id="note">
               Every family and every dog have different needs. This form will help us to identify what information will be
