--- a/foster_app.html
+++ b/foster_app.html
@@ -16,10 +16,10 @@
   <div class="subnav">
     <button class="subnavbtn">Adopt <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#">Adopt a Dog</a>
-      <a href="#">Adoptable Dogs</a>
-      <a href="#">Adoption Agreements</a>
-      <a href="#">Adoption Fees</a>
+      <a href="adopt_app.html">Adopt a Dog</a>
+      <a href="adoptable_dogs.html">Adoptable Dogs</a>
+      <a href="adoption_agreements.html">Adoption Agreements</a>
+      <a href="adoption_fees.html">Adoption Fees</a>
     </div>
   </div> 
 
@@ -116,55 +116,6 @@
                   value="moderate comings/goings">Moderate comings/goings</label>
               <label class="radio-label"><input type="radio" name="home-activity" class="input-radio"
                   value="quiet with Occasional Guests">Quiet with occasional guests</label>
-            </div>
-            <!-- People living with you -->
-            <div class="form-item">
-              <label class="label-item" for="people">Please list all people living in the household:</label>
-              <input type="text" required name="people" class="form-control"
-                placeholder="List people living with you (name and age)" size="60">
-            </div>
-            <!-- dog sex -->
-            <div class="form-item">
-              <p class="label-item">Do you have a preference in sex of foster?</p>
-              <label class="radio-label" class="label-item"><input type="radio" name="dog-sex" class="input-radio"
-                  value="male">Male</label>
-              <label class="radio-label" class="label-item"><input type="radio" name="dog-sex" class="input-radio"
-                  value="female">Female</label>
-              <label class="radio-label" class="label-item"><input type="radio" name="dog-sex" class="input-radio"
-                  value="no preference">No preference</label>
-            </div>
-            <!-- dog size -->
-            <div class="form-item">
-              <p class="label-item">Do you have a size preference of foster?</p>
-              <label class="radio-label" class="label-item"><input type="radio" name="dog-size" class="input-radio"
-                  value="small">Small</label>
-              <label class="radio-label" class="label-item"><input type="radio" name="dog-size" class="input-radio"
-                  value="medium">Medium</label>
-              <label class="radio-label" class="label-item"><input type="radio" name="dog-size" class="input-radio"
-                  value="large">Large</label>
-            </div>
-            <!-- care with patience -->
-            <div class="form-item">
-              <p class="label-item">We cannot guarantee a dog to be housebroken, are you equipped to train with love and
-                patience?</p>
-              <label class="radio-label" class="label-item"><input type="radio" name="care-patience" class="input-radio"
-                  value="yes">Yes</label>
-              <label class="radio-label" class="label-item"><input type="radio" name="care-patience" class="input-radio"
-                  value="no">No</label>
-            </div>
-            <!-- reason to have a dog -->
-            <div class="form-item">
-              <p class="label-item">
-                What is your reason for wanting to foster a dog?
-                <span class="clue">(Check all that apply)</span>
-              </p>
-              <label><input name="reason" value="housepet" type="checkbox" class="input-checkbox" />Housepet</label>
-              <label><input name="reason" value="home patrol" type="checkbox" class="input-checkbox" />Home patrol</label>
-              <label><input name="reason" value="companion" type="checkbox" class="input-checkbox" />Companion</label>
-              <label><input name="reason" value="companion for dog" type="checkbox" class="input-checkbox" />Companion for
-                pet</label>
-              <label><input name="reason" value="gift" type="checkbox" class="input-checkbox" />Gift</label>
-              <label><input name="reason" value="other" type="checkbox" class="input-checkbox" />Other</label>
             </div>
             <!-- button -->
             <div id="submit-explain">
