--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="subnav">
     <button class="subnavbtn">Adopt <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#">Adopt a Dog</a>
-      <a href="#">Adoptable Dogs</a>
-      <a href="#">Adoption Agreements</a>
-      <a href="#">Adoption Fees</a>
+      <a href="adopt_app.html">Adopt a Dog</a>
+      <a href="adoptable_dogs.html">Adoptable Dogs</a>
+      <a href="adoption_agreements.html">Adoption Agreements</a>
+      <a href="adoption_fees.html">Adoption Fees</a>
     </div>
   </div> 
 
