--- a/relationshipsince.html
+++ b/relationshipsince.html
@@ -8,6 +8,7 @@
     <title>Luis + Grace</title>
 </head>
 <body>
+    <div id="header"> Luis + Grace </div>
     <div id="timer"></div>
     <script src="relationshipsince.js"></script>
 </body>
